Major Update: SMK Negeri 1 Liwa branding, strong admin passwords, change password feature

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sistem Informasi Sekolah TJKT MPKK"
+      content="Sistem Informasi Sekolah SMK Negeri 1 Liwa - TJKT 2"
     />
-    <title>TJKT MPKK - Sistem Informasi Sekolah</title>
+    <title>Sistem Informasi Sekolah - SMK Negeri 1 Liwa | TJKT 2</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
